fix team form layout on mobile

--- a/pages/wow-raid-roster/wow-raid-roster.module.scss
+++ b/pages/wow-raid-roster/wow-raid-roster.module.scss
@@ -32,7 +32,7 @@ $class-colors: (
   }
 }
 
-.groupForm {
+.teamForm {
   display: flex;
   margin: 1rem 0;
   border-radius: 0.8rem;
@@ -41,6 +41,10 @@ $class-colors: (
 
   @include active-theme('dark') {
     background-color: rgba(255, 255, 255, 0.05);
+  }
+
+  @media all and (max-width: 540px) {
+    flex-flow: row wrap;
   }
 }
 
@@ -54,6 +58,29 @@ $class-colors: (
 
   &.fieldButton {
     margin-left: auto;
+  }
+
+  @media all and (max-width: 540px) {
+    width: 100%;
+
+    & + .field {
+      margin-top: 1rem;
+      margin-left: 0;
+    }
+
+    &.fieldButton button.saveBtn {
+      width: 100%;
+    }
+
+    input.fieldInput {
+      width: 100%;
+      min-width: 0;
+      padding: 0.4rem 0.3rem;
+
+      select {
+        width: 100%;
+      }
+    }
   }
 }
 
